--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-eslint": "^10.1.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^8.46.0",
+    "eslint-plugin-react": "^7.33.1",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.2",
+    "node-fetch": "^2.6.12",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "uniqid": "^5.4.0"
