--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.1.0",
     "babel-preset-env": "^1.7.0",
-    "eslint": "^8.46.0",
-    "eslint-plugin-react": "^7.33.1",
+    "eslint": "^8.47.0",
+    "eslint-plugin-react": "^7.33.2",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
@@ -28,6 +28,7 @@
     "node-fetch": "^2.6.12",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "swagger-js": "^1.0.0",
     "uniqid": "^5.4.0"
   },
   "description": ""
