--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-fetch": "^2.6.12",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "react-devtools": "^4.28.0",
     "swagger-js": "^1.0.0",
     "uniqid": "^5.4.0"
   },
